feat: add MULTIPLE_SELECT quiz type with list-based answer key
QuizQuestion now keys correct answers on a List<Integer>; quiz grading
uses exact set match. No DB migration — quiz state is session-only.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>